After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 784222 - Memory leak fix and cleanups
Memory leak fix and cleanups
Status: RESOLVED FIXED
Product: libdmapsharing
Classification: Other
Component: General
git master
Other All
: Normal normal
: ---
Assigned To: W. Michael Petullo
W. Michael Petullo
Depends on:
Blocks:
 
 
Reported: 2017-06-26 15:37 UTC by Bastien Nocera
Modified: 2017-06-27 02:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
daap-share: Fix leak when destroying DaapShare object (1.65 KB, patch)
2017-06-26 15:37 UTC, Bastien Nocera
none Details | Review
daap-share: Remove empty private struct and properties (2.52 KB, patch)
2017-06-26 15:37 UTC, Bastien Nocera
none Details | Review

Description Bastien Nocera 2017-06-26 15:37:01 UTC
.
Comment 1 Bastien Nocera 2017-06-26 15:37:05 UTC
Created attachment 354518 [details] [review]
daap-share: Fix leak when destroying DaapShare object

The dispose call wasn't chaining up to the parent. Removing the empty
custom implementation will make GObject call the parent directly.
Comment 2 Bastien Nocera 2017-06-26 15:37:10 UTC
Created attachment 354519 [details] [review]
daap-share: Remove empty private struct and properties

Neither are used, so no need to have them in code.
Comment 3 W. Michael Petullo 2017-06-26 16:02:07 UTC
Merged and pushed to master. I hope to  test and push a new release tonight.
Comment 4 W. Michael Petullo 2017-06-27 02:40:49 UTC
Fixed in 2.9.39.