daap-share: Fix leak when destroying DaapShare object

The dispose call wasn't chaining up to the parent. Removing the empty
custom implementation will make GObject call the parent directly.

https://bugzilla.gnome.org/show_bug.cgi?id=784222

Signed-off-by: W. Michael Petullo <mike@flyn.org>